# master
- updated toList() to Collectors.toList()