@@ -15,7 +15,7 @@ public class StreamMapCollectorReduceWay {
         // String of numbers to Integer list
         var numberList = Arrays.stream(numbers.split(","))
                 .map(Integer::parseInt)
-                .toList();
+                .collect(Collectors.toList());
         System.out.println("Input numbers: " + numberList);
 
         System.out.println("Total Even Numbers = " + countNumbers(numberList));
