@@ -3,6 +3,7 @@ package interview.programs.numbers.odd_even.values;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Scanner;
+import java.util.stream.Collectors;
 
 public class StreamFilterWay {
 
@@ -14,7 +15,7 @@ public class StreamFilterWay {
         // String of numbers to Integer list
         var numberList = Arrays.stream(numbers.split(","))
                 .map(Integer::parseInt)
-                .toList();
+                .collect(Collectors.toList());
         System.out.println("Input numbers: " + numberList);
 
         printOddEvenNumbers(numberList);
@@ -23,12 +24,12 @@ public class StreamFilterWay {
     private static void printOddEvenNumbers(List<Integer> numbers) {
         var evenNumbers = numbers.stream()
                 .filter(x -> x % 2 == 0)
-                .toList();
+                .collect(Collectors.toList());
         System.out.println("Even numbers: " + evenNumbers);
 
         var oddNumbers = numbers.stream()
                 .filter(x -> x % 2 != 0)
-                .toList();
+                .collect(Collectors.toList());
         System.out.println("Odd numbers: " + oddNumbers);
     }
 }
